--- a/app/assets/stylesheets/forever_style_guide/modules/_navbar.scss
+++ b/app/assets/stylesheets/forever_style_guide/modules/_navbar.scss
@@ -26,7 +26,7 @@
 
   .navbar-brand {
     display: block;
-    padding: 10px 30px 10px 15px;
+    padding: 10px 30px 10px 10px;
     height: $header_height;
 
     .navbar-brand-logo {
@@ -121,7 +121,6 @@
 
 .nav.navbar-nav.navbar-right {
   position: relative;
-  padding-right: 15px;
 
   // switches at screen collapse breakpoint
   @media(max-width: $grid-float-breakpoint) {
