--- a/app/assets/stylesheets/forever_style_guide/modules/_signin.scss
+++ b/app/assets/stylesheets/forever_style_guide/modules/_signin.scss
@@ -19,7 +19,7 @@
   }
 }
 .navbar-right .login {
-  padding: 2px 0 0 0;
+  padding: 2px 10px 0 0;
 
   @media( max-width: $screen-md) {
     padding-right: 10px
